# pdftoc

./: README.md  pyproject.toml
src/pdftoc/: cli.py  detect.py  extract.py  writer.py
