[project]
name = "pdftoc"
version = "0.1.0"
description = "Auto-infer PDF table of contents from font sizes and write as bookmarks"
requires-python = ">=3.10"
dependencies = ["pymupdf"]

[project.scripts]
pdftoc = "pdftoc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdftoc"]
